po: update po/nl_NL/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-05-05 12:42+0000\n"
+"PO-Revision-Date: 2016-05-19 03:37+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -41,7 +41,7 @@ msgstr "Associatieregel toevoegen"
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Rule ID !1 was successfully deleted."
-msgstr "Regel nummer !1 was succesvol verwijderd."
+msgstr "Regel nummer !1 is succesvol verwijderd."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
@@ -122,7 +122,7 @@ msgstr "Land"
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_county.inc
 msgid "County"
-msgstr "Streek"
+msgstr "Regio"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_event_type.inc
@@ -139,7 +139,7 @@ msgstr "Deelnemersstatus"
 #: drupal/modules/views/civicrm/civicrm_handler_filter_payment_instrument.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_type.inc
 msgid "Contribution Type"
-msgstr "Bijdrage-type"
+msgstr "Bijdragetype"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_page.inc
@@ -788,11 +788,11 @@ msgstr "Wil dit contact geen berichten ontvangen?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Do Not Trade"
-msgstr "Niet mee werken"
+msgstr "Niet uitwisselen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Does this contact not want trade?"
-msgstr "Wil dit contact geen handel?"
+msgstr "Wil dit contact niet dat zijn of haar gegevens worden uitgewisseld met andere organisaties?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Opted Out of Bulk Mail"
@@ -864,7 +864,7 @@ msgstr "Straat en huisnummer"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Full Street Address without Country, State or Postcode"
-msgstr "Volledig adres zonder Land, Provincie en postcode"
+msgstr "Adres zonder land, provincie of postcode"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Supplemental Street Address"
@@ -1013,7 +1013,7 @@ msgstr "Het type van de website voor het contact"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Website URL"
-msgstr "Website URL"
+msgstr "Website-URL"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Events"
@@ -1178,7 +1178,7 @@ msgstr "De rol waarvoor de deelnemer is geregistreerd."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source"
-msgstr "Bron"
+msgstr "Herkomst"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Where did this registration come from?"
@@ -1230,7 +1230,7 @@ msgstr "Het bedrag dat de Deelnemer betaald heeft of zal moeten betalen."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Contributions"
-msgstr "CiviCRM Bijdragen"
+msgstr "CiviCRM-bijdragen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "View displays CiviCRM Contributions, with relation to contacts."
@@ -1346,11 +1346,11 @@ msgstr "De datum waarop de kwitantie van de bijdrage per e-mail is verstuurd."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Thank You Date"
-msgstr "Datum 'Dank U'"
+msgstr "Datum bedankbericht"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Date a thank you to the donor for the contribution was sent."
-msgstr "Datum dat een Dank U naar de donor werd verzonden."
+msgstr "Datum dat een bedankbericht aan de gever werd verzonden."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Where the Contribution came through."
@@ -1510,7 +1510,7 @@ msgstr "Volgende datum voor bijdrage"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Next Contribution Date."
-msgstr "De volgende datum voor bijdrage"
+msgstr "De volgende datum voor deze bijdrage."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Failure Count"
@@ -1566,7 +1566,7 @@ msgstr "CiviCRM-broncontact"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source Record ID"
-msgstr "Bron Record ID"
+msgstr "Bronrecord-ID"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who made this activity"
@@ -1810,7 +1810,7 @@ msgstr "Einddatum lidmaatschap"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source of the relationship"
-msgstr "Bron van de relatie"
+msgstr "Herkomst relatie"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Status"
@@ -1858,7 +1858,7 @@ msgstr "Komt de betaling later?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Groups"
-msgstr "CiviCRM-Groepen"
+msgstr "CiviCRM-groepen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Contact Status"
@@ -1962,7 +1962,7 @@ msgstr "Afzenderadres van de mailing"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Reply to Email"
-msgstr "Antwoord op e-mail"
+msgstr "Reply-To-adres"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Reply Email of the mailing"
@@ -1970,7 +1970,7 @@ msgstr "Beantwoord e-mail van de mailing"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Track URLs?"
-msgstr "Track URLs ?"
+msgstr "URLs tracken?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Does the mailing track click throughs?"
@@ -2714,7 +2714,7 @@ msgstr "CiviMember Lidmaatschap Types of Status Rollen zijn niet geconfigureerd.
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact has been created"
-msgstr "Contact is gemaakt"
+msgstr "Contact aangemaakt"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Created contact"
@@ -2806,7 +2806,7 @@ msgstr "Mailing is voltooid"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Completed mailing"
-msgstr "Afgeronde mailing"
+msgstr "Voltooide mailing"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Add Contact to CiviCRM Group"
@@ -2880,7 +2880,7 @@ msgstr "Andere naam"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 msgid "Street#"
-msgstr "Straatnummer"
+msgstr "Huisnummer"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 msgid "Street Name"
@@ -2888,7 +2888,7 @@ msgstr "Straatnaam"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 msgid "Apt."
-msgstr "Appt."
+msgstr "Toev."
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 msgid "Party Reg"
