po: update po/hu_HU/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/admin.po
+++ b/po/hu_HU/admin.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-18 16:18+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -270,7 +270,7 @@ msgstr "Válaszcímként érvényes email címet adj meg!"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "szerver"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -982,11 +982,11 @@ msgstr "Viszony típus mentése sikeres."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "E-mail küldése"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr ""
+msgstr "Automatikus e-mail részére tevékenység rögzítése"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
@@ -1002,19 +1002,19 @@ msgstr "Küldés mint"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "előtte"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "utána"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
-msgstr ""
+msgstr "akció feltétele"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
-msgstr ""
+msgstr "Ismétlés feltétele"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
@@ -1022,7 +1022,7 @@ msgstr "Feladó"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
-msgstr ""
+msgstr "Korlátozva"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Also include"
@@ -1034,15 +1034,15 @@ msgstr "Címzettek korlátozása vagy hozzáadása"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit Options"
-msgstr ""
+msgstr "Opciók korlátozása"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
-msgstr ""
+msgstr "Címzettek szerepköre"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
-msgstr ""
+msgstr "Manuális címzett"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select appropriate value"
@@ -1050,7 +1050,7 @@ msgstr "Kérem válasszon megfelelő értéket"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Subject is a required field."
-msgstr ""
+msgstr "Tárgy szükséges mező"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
@@ -1058,7 +1058,7 @@ msgstr "Kérem válasszon egyed értéket"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Absolute date cannot be earlier than the current time."
-msgstr ""
+msgstr "Az abszolút időpont nem lehet korábbi mint az aktuális idő."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid ""
@@ -1068,11 +1068,11 @@ msgstr "Ha a \"tartalmazni\" vagy a \"korlátozva\" kiválasztott, legalább egy
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
-msgstr ""
+msgstr "A kiválasztott emlékeztető törölve lett."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
-msgstr ""
+msgstr "Az új emlékeztetője %1 címmel, mentésre került."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
@@ -1985,7 +1985,7 @@ msgstr "Biztos abban, hogy törli ezt térképet?"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
-msgstr ""
+msgstr "Ez a művelet nem visszavonható."
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Edit Mapping"
@@ -2177,202 +2177,202 @@ msgstr "Címkék összefűzése"
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Summary"
-msgstr ""
+msgstr "Jogosultságok: Összegzés"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Details"
-msgstr ""
+msgstr "Jogosultságok: Részletek"
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "Tulajdonság"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
-msgstr ""
+msgstr "A  \\\"%1\\\", alkalmazás engedélyt kér a rendszer hozzáféréshez. "
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr ""
+msgstr "Biztos abban. hogy újracsatlakozik  \\\"%1\\\" ?"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
 "Reconnecting will change the connection details (such as callback URLs and "
 "permissions). This can be useful in a few cases, such as:"
-msgstr ""
+msgstr "Az újra csatlakozás megváltoztatja a csatlakozási részleteket (mint például a visszahívási URL-k és a jogosultságok). \nEz hasznos lehet néhány esetben, mint a:"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "A weboldala az új URL-re történő migrációja után. "
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "Az alkalmazás az új URL-re történő migrációja után. "
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
-msgstr ""
+msgstr "Az alkalmazás megváltoztatta a jogosultsági követelményeket. "
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has a major failure or reset."
-msgstr ""
+msgstr "Az alkalmazás nagy hibája vagy újra indítása után."
 
 #: ang/crmCxn/Connectivity.html
 msgid ""
 "There was a problem verifying that this site is available on the public "
 "Internet."
-msgstr ""
+msgstr "Probléma történt annak ellenőrzése során, hogy a weboldal hozzáférhető-e a nyilvános Interneten. "
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Lásd még::"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
-msgstr ""
+msgstr "Tűzfalak és proxik"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Connections provide a simplified way to link your CiviCRM installation to an"
 " external service."
-msgstr ""
+msgstr "A kapcsolódások egyszerűsített úton linkelik a CiviCRM-et egy külső szolgáltatáshoz."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "Meglévő kapcsolódások"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
-msgstr ""
+msgstr "%1: Névjegy"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Settings (External)"
-msgstr ""
+msgstr "%1: Beállítások (külső)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Logs (External)"
-msgstr ""
+msgstr "%1: Naplók (külső)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
-msgstr ""
+msgstr "Naplók"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
-msgstr ""
+msgstr "%1: Dokumentáció (külső)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
-msgstr ""
+msgstr "Dokumentumok"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
-msgstr ""
+msgstr "%1: Támogatás (Külső)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Support"
-msgstr ""
+msgstr "Támogatás"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Reconnect"
-msgstr ""
+msgstr "%1: Újracsatlakozás"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
-msgstr ""
+msgstr "Újracsatlakozás"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
-msgstr ""
+msgstr "%1: Szétcsatlakozás"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Are you sure you want to disconnect \"%1?\". Doing so may permanently "
 "destroy data linkage."
-msgstr ""
+msgstr "Biztos abban, hogy szétcsatlakoztatja \"%1?\". Ha ezt teszi véglegesen tönkreteszi az adatösszekapcsolást.   "
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
-msgstr ""
+msgstr "Szétcsatlakozás"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Új kapcsolódások"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
-msgstr ""
+msgstr "%1: Csatlakozás"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
-msgstr ""
+msgstr "Csatlakozás"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
-msgstr ""
+msgstr "Nincs rendelkezésre álló alkalmazás"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Application List Unavailable"
-msgstr ""
+msgstr "Alkalmazási lista nem elérhető"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Internet Access Required"
-msgstr ""
+msgstr "Internet hozzáférés szükséges"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
-msgstr ""
+msgstr "Csatlakozás..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connected"
-msgstr ""
+msgstr "Kapcsolódva"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
-msgstr ""
+msgstr "Újracsatlakozás..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnected"
-msgstr ""
+msgstr "Újracsatlakoztatva"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnecting..."
-msgstr ""
+msgstr "Szétbontás..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnected"
-msgstr ""
+msgstr "Szétbontva"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid ""
 "The page \"%1\" will open in a popup. If it does not appear automatically, "
 "check your browser for notifications."
-msgstr ""
+msgstr "A \"%1\" oldal egy felugróablakban nyílik meg. Ha nem jelenik meg automatikusan, ellenőrizze le a böngészőjét."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
-msgstr ""
+msgstr "Nem tudom megnyitni a linket. Nem felismert mód."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Opening..."
-msgstr ""
+msgstr "Megnyitás..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
-msgstr ""
+msgstr "Külső link"
 
 #: ang/crmCxn/PermTable.html
 msgid "Action(s)"
-msgstr ""
+msgstr "Művelet(ek)"
 
 #: ang/crmCxn/PermTable.html
 msgid "Filter(s)"
-msgstr ""
+msgstr "Szűrő(k)"
 
 #: ang/crmCxn/PermTable.html
 msgid "Field(s)"
-msgstr ""
+msgstr "Mező(k)"
 
 #: ang/crmCxn/PermTable.html
 msgid ""
@@ -3218,11 +3218,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
-msgstr ""
+msgstr "Ismétlés engedélyezése."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
-msgstr ""
+msgstr "Kézi módszerrel küldhet emlékeztetőt ezeknek a címzetteknek. "
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
@@ -4982,7 +4982,7 @@ msgstr "Szerző"
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Version"
-msgstr ""
+msgstr "Változat"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Released on"
@@ -5042,7 +5042,7 @@ msgstr "Nincsenek kijelezhető kiterjesztések. Kérem kattintson a \"Új hozzá
 
 #: templates/CRM/Admin/Page/Extensions/Refresh.tpl
 msgid "Refresh"
-msgstr ""
+msgstr "Frissítés"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid ""
@@ -5162,7 +5162,7 @@ msgstr "A hely típusok további kényelmi címkéket biztosítanak a kapcsolat(
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Port"
-msgstr ""
+msgstr "Port"
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Bounce Processing <strong>(Default)</strong>"
@@ -5847,7 +5847,7 @@ msgstr "Egy kép kijelzéséhez, több paramétert meg kell adnia ehhez az URL-h
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Parameters"
-msgstr ""
+msgstr "Paraméterek"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Values"
@@ -6295,7 +6295,7 @@ msgstr "Az ütemezett emlékeztetők lehetővé teszik a tagságukkal, esemény 
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid "Add Reminder"
-msgstr ""
+msgstr "Emlékeztető hozzáadása "
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
@@ -6425,7 +6425,7 @@ msgstr "Válasszon ki címkét"
 
 #: CRM/Admin/Form/CMSUser.php
 msgid "Synchronize Complete"
-msgstr ""
+msgstr "Szinkronizálás teljes"
 
 #: CRM/Admin/Form/Job.php
 msgid ""
@@ -6437,27 +6437,27 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
-msgstr ""
+msgstr "Menü elem"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Unrestricted"
-msgstr ""
+msgstr "Korlátlan"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "After menu element"
-msgstr ""
+msgstr "Menü elem után"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Before menu element"
-msgstr ""
+msgstr "Menü elem elött"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator"
-msgstr ""
+msgstr "Elválasztó"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Top level"
-msgstr ""
+msgstr "Felső szintű"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Access Control by Financial Type"
@@ -6465,110 +6465,110 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "CKEditor beállítása"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Contacts with no preferred language"
-msgstr ""
+msgstr "Kapcsolatok preferált nyelv nélkül"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipients language"
-msgstr ""
+msgstr "Címzettek nyelve"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "System default language"
-msgstr ""
+msgstr "Rendszer alapértelmezett nyelve"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Follow recipient preferred language"
-msgstr ""
+msgstr "Címzettek preferált nyelvének követése"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Communication language"
-msgstr ""
+msgstr "Kommunikáció nyelve"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "The HTML message is a required field."
-msgstr ""
+msgstr "A HTML üzenet szükséges mező."
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Language for users"
-msgstr ""
+msgstr "Felhasználók alapértelmezett nyelve"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Use default site language"
-msgstr ""
+msgstr "A weboldal alapértelmezett nyelvének használata"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Leave undefined"
-msgstr ""
+msgstr "Határozatlanként hagy"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Use language in use at the time"
-msgstr ""
+msgstr "A használatban lévő nyelv használata"
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
-msgstr ""
+msgstr "Sikertelen mentés"
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid ""
 "You may need to clear your browser's cache to see the changes in CiviCRM."
-msgstr ""
+msgstr "A böngészőjének a chach-ét lehet, hogy ki kell ürítenie a CiviCRM változásainak megtekintésére."
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
-msgstr ""
+msgstr "CKEditor mentve"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
-msgstr ""
+msgstr "Felfedés"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Hide"
-msgstr ""
+msgstr "Elrejtés"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a week"
-msgstr ""
+msgstr "Egy héten belül emlékeztessen újra"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a month"
-msgstr ""
+msgstr "Egy hónapon belül emlékeztessen újra"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Never remind me again"
-msgstr ""
+msgstr "Soha ne emlékeztessen újra"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "CiviCRM System Status"
-msgstr ""
+msgstr "CiviCRM rendszerállapot"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
-msgstr ""
+msgstr "Rejtett"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden until %1"
-msgstr ""
+msgstr "Eddig rejtett %1 "
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden permanently"
-msgstr ""
+msgstr "Véglegesen rejtett"
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid ""
 "Do not run this job before this date / time. The run frequency selected "
 "above will apply thereafter."
-msgstr ""
+msgstr "Ne futtassa ezt a feladatot ezen dátum/idő előtt. A kiválasztott futási gyakoriság az után kerül alkalmazásra."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "Leave blank to run as soon as possible."
-msgstr ""
+msgstr "Hagyja üresen a mielőbbi futtatáshoz."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "Leave blank to run at next run frequency."
-msgstr ""
+msgstr "Hagyja üresen a következő frekvencia szerinti futtatáshoz."
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
@@ -6607,36 +6607,36 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "Naptár"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
-msgstr ""
+msgstr "Speciális jelek tartalmazzák:"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency symbol (e.g. '$')"
-msgstr ""
+msgstr "pénzszimbóliumok (pl. '$')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency ISO code (e.g. 'USD')"
-msgstr ""
+msgstr "pénz ISO kódja (pl. 'USD')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "monetary amount, formatted according to selected Monetary Locale"
-msgstr ""
+msgstr "pénzösszeg, a kiválasztott helybeállításoknak megfelelően formázva"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid ""
 "For a full list of options see the php <a %1>money_format documentation</a>."
-msgstr ""
+msgstr "Az opciók teljes listájához forduljon a php <a %1>money_format dokumentációhoz</a>."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Format for displaying monetary amounts with currency symbol."
-msgstr ""
+msgstr "Pénzösszeg pénzszimbólummal történő kijelzés formátuma."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Format for displaying monetary values without the currency symbol."
-msgstr ""
+msgstr "Pénzösszeg pénzszimbólum nélkül történő kijelzés formátuma."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid ""
@@ -6646,17 +6646,17 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Configure CiviCRM for your country and language."
-msgstr ""
+msgstr "CiviCRM beállítása országához és nyelvéhez."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Default language (if any) for contact records."
-msgstr ""
+msgstr "Alapértelmezett nyelv (ha van) a kapcsolat rekordokhoz."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
-msgstr ""
+msgstr "(Többnyelvű támogatás jelenleg nem engedélyezhető az olyan telepítéseknél ahol a engedélyezett naplózás.)"
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid ""
@@ -6665,11 +6665,11 @@ msgid ""
 "Please read the %1 documentation, and make sure you understand it before "
 "modifying default values. (These settings are NOT used for the built-in "
 "'Email - send now' feature)."
-msgstr ""
+msgstr "Ezek a beállítások a levelező beállításait tartalmazzák az opcionális CiviKörlevél komponenshez és jelentősen optimalizálhatja vele a teljesítményt. Kérem olvassa el a dokumentációban %1, és győződjön meg róla, hogy érti azt mielőtt módosítja az alapértelmezett értékeket. (Ezek a beállítások nem érintik a beépített 'E-mail küldés a kapcsolatoknak' funkciót)."
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
-msgstr ""
+msgstr "Útvonal változók"
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 #: templates/CRM/Admin/Form/Setting/Url.hlp
