--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:32+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -273,7 +273,7 @@ msgstr "Het retouradres wordt gebruikt als Return-Path, en moet een geldig e-mai
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Server"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -310,7 +310,7 @@ msgstr "Wijzigingen niet opgeslagen."
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr "Veld mapping"
+msgstr "Veldmapping"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -473,7 +473,7 @@ msgstr "Is dit de standaard-betaalmethode?"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "You must have at least the test or live section filled"
-msgstr "U dient minimaal het productie- of het testgedeelte in te vullen"
+msgstr "U dient in ieder geval het productie- óf het testgedeelte in te vullen"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "You must have at least the user_name specified"
@@ -537,11 +537,11 @@ msgstr "Test-URL API"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Test Recurring Payments URL"
-msgstr "Test-URL terugkerende betalingen"
+msgstr "Test-URL periodieke betalingen"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Test Button URL"
-msgstr "Knop test-URL"
+msgstr "URL voor testknop"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Is this Payment Processor Type active?"
@@ -932,7 +932,7 @@ msgstr "Uw wijzigingen zijn opgeslagen."
 #: CRM/Admin/Form/PreferencesDate.php
 #: templates/CRM/Admin/Page/PreferencesDate.tpl
 msgid "Start Offset"
-msgstr "Beginafwijking"
+msgstr ""
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "Format"
@@ -985,7 +985,7 @@ msgstr "Het relatietype is opgeslagen."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "E-mail versturen"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
@@ -993,7 +993,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
-msgstr "Verstuur e-mail of SMS"
+msgstr "E-mail of SMS versturen"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email or SMS"
@@ -1005,11 +1005,11 @@ msgstr "Verstuur als"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "voor"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "na"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
@@ -1385,7 +1385,7 @@ msgstr "Aangepaste PHP-map"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "CiviCRM Extensions Directory"
-msgstr "Extensie Map"
+msgstr "Extensie-map"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "'%1' directory does not exist"
@@ -1490,7 +1490,7 @@ msgstr "Opslaan & testbericht verzenden"
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid ""
 "You have selected \"Disable Outbound Email\". A test email can not be sent."
-msgstr "U hebt \"Uitgaande e-mail uitschakelen\" gekozen. Er kan geen test-e-mail verzonden worden."
+msgstr "U hebt \"Uitgaande e-mail uitschakelen\" gekozen. Er kan geen testmail verzonden worden."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Email Disabled"
@@ -1504,17 +1504,17 @@ msgstr "U heeft geselecteerd \"Doorverwijzen naar database\". Een test e-mail wo
 msgid ""
 "Cannot send a test email because your user record does not have a valid "
 "email address."
-msgstr "U kunt geen test-e-mail versturen omdat uw gebruikersrecord geen geldig e-mailadres bevat."
+msgstr "U kunt geen testmail versturen omdat uw gebruikersrecord geen geldig e-mailadres bevat."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sending test email. FROM: %1 TO: %2.<br />"
-msgstr "Test-e-mail wordt verzonden. VAN: %1, NAAR: %2.<br />"
+msgstr "Testmail wordt verzonden. VAN: %1, NAAR: %2.<br />"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid ""
 "Your %1 settings are correct. A test email has been sent to your email "
 "address."
-msgstr "Uw %1 instellingen zijn correct. Er is een test-e-mail verstuurd naar uw e-mailadres."
+msgstr "Uw %1 instellingen zijn correct. Er is een testmail verstuurd naar uw e-mailadres."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Sent"
@@ -1522,7 +1522,7 @@ msgstr "E-mail verzonden"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Oops. Your %1 settings are incorrect. No test mail has been sent."
-msgstr "Uw %1 instellingen zijn onjuist. Er is geen test-e-mail verzonden."
+msgstr "Uw instellingen voor %1 zijn onjuist. Er is geen testmail verzonden."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Not Sent"
@@ -1562,11 +1562,11 @@ msgstr "De CiviCRM-caches zijn geleegd en het menu is opnieuw opgebouwd."
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Settings - Resource URLs"
-msgstr "Instellingen - Bron URL's"
+msgstr "Instellingen - Bron-URLs"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "CiviCRM Resource URL"
-msgstr "CIVICRM Bron URL"
+msgstr "Bron-URL CiviCRM"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Image Upload URL"
@@ -1578,7 +1578,7 @@ msgstr "Aangepaste CSS URL"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Extension Resource URL"
-msgstr "Extensie Bron URL"
+msgstr "Bron-URL extensies"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Force Secure URLs (SSL)"
@@ -1952,7 +1952,7 @@ msgstr "Verwijder etiketformaat"
 
 #: CRM/Admin/Page/LabelFormats.php
 msgid "Mailing Label"
-msgstr "Verzendetiket"
+msgstr "Etiket"
 
 #: CRM/Admin/Page/LabelFormats.php
 msgid "Name Badge"
@@ -2207,11 +2207,11 @@ msgstr ""
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "Nadat uw site is gemigreerd naar een nieuwe URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "Nadat de applicatie is gemigreerd naar een nieuwe URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
@@ -2259,7 +2259,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
-msgstr ""
+msgstr "Logs"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
@@ -2267,7 +2267,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
-msgstr ""
+msgstr "Documentatie"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
@@ -2305,11 +2305,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
-msgstr ""
+msgstr "%1: Verbinden"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
-msgstr ""
+msgstr "Verbinden"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
@@ -2325,11 +2325,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
-msgstr ""
+msgstr "Verbinden..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connected"
-msgstr ""
+msgstr "Verbonden"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
@@ -3378,11 +3378,11 @@ msgstr "minuut, met voorloopnul ('00'..'59')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "lowercase ante/post meridiem ('am', 'pm')"
-msgstr "aanduiding dagdeel ('vm', 'nm')"
+msgstr "aanduiding dagdeel ('am', 'pm')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "uppercase ante/post meridiem ('AM', 'PM')"
-msgstr "aanduiding dagdeel ('VM', 'NM')"
+msgstr "aanduiding dagdeel ('AM', 'PM')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "year as a decimal number including the century ('2015')"
@@ -3445,7 +3445,7 @@ msgstr "Maakt een pop-up venster met daarin alle variabelen behorend bij het hui
 
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
 msgid "Session Reset"
-msgstr "Sessie terugzetten"
+msgstr "Reset sessie"
 
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
 msgid "Resets all values in your client session. To trigger, add <em>%1</em>"
@@ -3918,7 +3918,7 @@ msgstr "Pad naar de map waar de optionele PHP-bestanden, die specifiek voor de s
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid "Path where CiviCRM extensions are stored."
-msgstr "Map waar extensies worden opgeslagen."
+msgstr "Map waar CiviCRM-extensies zijn opgeslagen."
 
 #: templates/CRM/Admin/Form/Setting/Search.tpl
 msgid ""
@@ -4191,7 +4191,7 @@ msgstr "Het controleren van het SSL certificaat is nodig om zeker te zijn dat Ci
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Resource URL"
-msgstr "Bron URL"
+msgstr "Bron-URL"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -4215,17 +4215,17 @@ msgstr "URL van de locatie voor de geüploade afbeeldingen."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Extensions URL"
-msgstr "Extensies URL"
+msgstr "Extensie-URL"
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Base URL for extension resources (images, stylesheets, etc)."
-msgstr "Basis URL voor extensie onderdelen (afbeeldingen, stylesheets, enz.)."
+msgstr "Basis-URL voor extensiebestanden (afbeeldingen, stylesheets, enzovoort)."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
 "This should match the <a href=\"%1\">\"CiviCRM Extensions Directory\"</a> "
 "(\"%2\")."
-msgstr "Dit moet overeenkomen met de <a href=\"%1\">\"CiviCRM Extensie Map\"</a> (\"%2\")."
+msgstr "Dit moet overeenkomen met de <a href=\"%1\">\"CiviCRM extensie-map</a> (\"%2\")."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Customizing CSS"
@@ -4345,7 +4345,7 @@ msgstr "Rij toevoegen"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Parameter Name"
-msgstr "Parameter Naam"
+msgstr "Parameternaam"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Choose a parameter from the list, or select \"other\" for manual entry."
@@ -5023,7 +5023,7 @@ msgstr "<p>U kunt ook de <a href=\"%2/%1\" target=\"_blank\">extensies map</a> v
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Extension name (key)"
-msgstr "Extensie naam (key)"
+msgstr "Extensienaam (key)"
 
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 msgid ""
@@ -5051,7 +5051,7 @@ msgstr ""
 msgid ""
 "Your extensions require database updates. Please <a href=\"%1\">execute the "
 "updates</a>."
-msgstr "Voor uw extensie is er een upgrade van de database  nodig.  <a href=\"%1\">Upgrade uitvoeren</a>."
+msgstr "Voor uw extensies is een database-upgrade nodig.  <a href=\"%1\">Upgrade uitvoeren</a>."
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Add New"
@@ -5403,7 +5403,7 @@ msgstr "Bekijken en wijzigen opties"
 
 #: templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "Add Option Group"
-msgstr "Optie Groep Toevoegen"
+msgstr "Optiegroep toevoegen"
 
 #: templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "There are no Option Groups entered. You can <a href='%1'>add one</a>."
@@ -5850,11 +5850,11 @@ msgstr "Om een afbeelding te tonen moet u verschillende parameters aan deze URL 
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Parameters"
-msgstr ""
+msgstr "Parameters"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Values"
-msgstr "Waarde"
+msgstr "Waarden"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "large/medium/small"
@@ -6298,7 +6298,7 @@ msgstr "Geplande herinneringen maken het u mogelijk om automatisch berichten naa
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid "Add Reminder"
-msgstr ""
+msgstr "Herinnering instellen"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
@@ -6332,13 +6332,13 @@ msgstr "Configureer de mappen in uw bestandssysteem die gebruikt worden voor tij
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Resource URLs"
-msgstr "Bron-URL's"
+msgstr "Bron-URLs"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
 "URLs used to access CiviCRM resources (CSS files, Javascript files, images, "
 "etc.). Enable secure URLs."
-msgstr "URL's om toegang te krijgen tot CiviCRM bronnen (CSS, JavaScript, afbeeldingen, enz.). Schakel veilige URL's in."
+msgstr "URLs om toegang te krijgen tot CiviCRM-resources (CSS, JavaScript, afbeeldingen, enzovoort). Schakel veilige URL's in."
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Outbound Email (SMTP/Sendmail)"
@@ -6428,7 +6428,7 @@ msgstr "Selecteer een kenmerk"
 
 #: CRM/Admin/Form/CMSUser.php
 msgid "Synchronize Complete"
-msgstr ""
+msgstr "Synchronisatie voltooid"
 
 #: CRM/Admin/Form/Job.php
 msgid ""
@@ -6440,7 +6440,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
-msgstr ""
+msgstr "Menu-item"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Unrestricted"
@@ -6456,7 +6456,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator"
-msgstr ""
+msgstr "Scheidingsteken"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Top level"
@@ -6525,11 +6525,11 @@ msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
-msgstr ""
+msgstr "Verbergen ongedaan maken"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Hide"
-msgstr ""
+msgstr "Verbergen"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a week"
@@ -6545,19 +6545,19 @@ msgstr ""
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "CiviCRM System Status"
-msgstr ""
+msgstr "CiviCRM-systeemstatus"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
-msgstr ""
+msgstr "Verborgen"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden until %1"
-msgstr ""
+msgstr "Verborgen tot"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden permanently"
-msgstr ""
+msgstr "Permanent verborgen"
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid ""
@@ -6606,11 +6606,11 @@ msgstr ""
 msgid ""
 "Other WYSIWYG editors are available for download from the <a %1>CiviCRM "
 "Extension Directory</a>."
-msgstr ""
+msgstr "Andere WYSIWYG-editors kunnen gedownload worden via het <a %1>CiviCRM-extensieoverzicht</a>."
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "Kalender"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
