po: update po/nl_NL/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:30+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -303,7 +303,7 @@ msgstr "%1 Bewaard"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "Met contact(en)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -415,7 +415,7 @@ msgstr "Alle activiteiten"
 
 #: CRM/Case/Form/Report.php
 msgid "Exclude Completed Activities"
-msgstr "Exclusief afgeronde activiteiten"
+msgstr "Exclusief voltooide activiteiten"
 
 #: CRM/Case/Form/Report.php
 msgid "Redact (hide) Client and Service Provider Data"
@@ -608,7 +608,7 @@ msgstr "Ouderenzorg verwijzing"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Case Resources"
-msgstr "Dossier bronnen"
+msgstr "Dossier-bronnen"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Max Instances"
@@ -616,7 +616,7 @@ msgstr ""
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Activiteitstype toevoegen"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
@@ -636,7 +636,7 @@ msgstr ""
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "Meer lezen..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
@@ -644,15 +644,15 @@ msgstr "Rollen"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Toevoegen..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
-msgstr ""
+msgstr "Tijdlijn"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
-msgstr ""
+msgstr "Volgorde"
 
 #: ang/crmCaseType/list.html
 msgid ""
@@ -669,11 +669,11 @@ msgstr ""
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Rol toevoegen"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Referentie"
 
 #: ang/crmCaseType.js
 msgid ""
@@ -1115,11 +1115,11 @@ msgstr ""
 
 #: CRM/Case/Form/Task/Delete.php CRM/Case/Info.php CRM/Case/Task.php
 msgid "Delete cases"
-msgstr ""
+msgstr "Dossiers verwijderen"
 
 #: CRM/Case/Info.php
 msgid "Define case types, access deleted cases"
-msgstr ""
+msgstr "Dossiertypes definiëren, toegang tot verwijderde dossiers"
 
 #: CRM/Case/Info.php
 msgid "View and edit only those cases managed by this user"
@@ -1131,15 +1131,15 @@ msgstr ""
 
 #: CRM/Case/Info.php
 msgid "Open a new case"
-msgstr ""
+msgstr "Nieuw dossier openen"
 
 #: CRM/Case/Task.php
 msgid "Export cases"
-msgstr ""
+msgstr "Dossiers exporteren"
 
 #: CRM/Case/Task.php
 msgid "Restore cases"
-msgstr ""
+msgstr "Dossiers herstellen"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
@@ -1175,7 +1175,7 @@ msgstr ""
 
 #: ang/crmCaseType/list.html
 msgid "Case Types"
-msgstr ""
+msgstr "Dossiertypes"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter"
@@ -1183,7 +1183,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
-msgstr ""
+msgstr "Document exporteren"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
