po: update po/ru_RU/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ru_RU/admin.po
+++ b/po/ru_RU/admin.po
@@ -18,13 +18,14 @@
 # Victor Ilyin <wictinfo@gmail.com>, 2012
 # Yuri Kozlov <yuray@komyakino.ru>, 2013
 # Yuriy Shpak <y.shpak@servantek.net>, 2012
+# Андрей Д <andrey_deev@bk.ru>, 2016
 # Фёдор Ходьков <fkhodkov@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-18 19:14+0000\n"
+"Last-Translator: Андрей Д <andrey_deev@bk.ru>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -82,7 +83,7 @@ msgstr "Скачать и установить"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Скачать и установить \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
@@ -90,15 +91,15 @@ msgstr "Деинсталляция"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Удалить \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Включить \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Выключить \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
