po: update po/nl_NL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:31+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -544,7 +544,7 @@ msgstr "Berichtsjablonen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Schedule Reminders"
-msgstr "Herinneringen plannen"
+msgstr "Herinneringen inplannen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -653,7 +653,7 @@ msgstr "Diversen (Verwijderen herstellen, PDF's, limieten, loggen, captcha, etc.
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Directories"
-msgstr "Directory's"
+msgstr "Mappen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -894,7 +894,7 @@ msgstr "CiviCRM-blog"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "Aan de slag met CiviCRM"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -1234,7 +1234,7 @@ msgstr "Mailing doorsturen"
 
 msgctxt "menu"
 msgid "Sending Mail"
-msgstr "Mail verzenden..."
+msgstr "Mail wordt verzonden"
 
 msgctxt "menu"
 msgid "Mailing Event"
@@ -1349,7 +1349,7 @@ msgstr "CiviCRM-nieuws"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Aan de slag"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1649,7 +1649,7 @@ msgstr "Debuggen en foutafhandeling"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "SMS Providers"
-msgstr "SMS-diensten"
+msgstr "SMS-providers"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1855,7 +1855,7 @@ msgstr "Toont, gegeven twee perioden, contacten die in beide perioden een bijdra
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "SYBUNT (some year but not this year)"
-msgstr "OMNDJ (ooit maar niet dit jaar)"
+msgstr "SYBUNT (ooit maar niet dit jaar)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1868,7 +1868,7 @@ msgstr "Ooit maar niet dit jaar. Geeft een lijst van ingezetenen die vroeger ooi
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "LYBUNT (last year but not this year)"
-msgstr "VJMNDJ (vorig jaar maar niet dit jaar)"
+msgstr "LYBUNT (vorig jaar maar niet dit jaar)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2198,7 +2198,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Extensies"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
