--- a/po/nl_NL/extension.po
+++ b/po/nl_NL/extension.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:07+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgid ""
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br "
 "/>"
-msgstr "De openbare lijst met CiviCRM-extensies op %1 kan niet worden benaderd - controleer a.u.b. of uw webserver externe HTTP-verzoeken kan doen of neem contact op met het CiviCRM-team op het <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br />"
+msgstr "Het openbare CiviCRM-extensieoverzicht op %1 kan niet worden benaderd - controleer a.u.b. of uw webserver externe HTTP-verzoeken kan doen of neem contact op met het CiviCRM-team op het <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br />"
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
@@ -58,11 +58,11 @@ msgstr "Foute basismap"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank directory."
-msgstr "Er is een extensie container gedefinieerd met een blanco map"
+msgstr "Er is een extensiecontainer gedefinieerd zonder geldige map."
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base URL"
-msgstr "Foute basis URL"
+msgstr "Foute basis-URL"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank URL."
@@ -82,19 +82,19 @@ msgstr "Fout bij verwerken extensie: %1"
 msgid ""
 "The extensions directory is not properly set. Please go to the <a "
 "href=\"%1\">path setting page</a> and correct it.<br/>"
-msgstr "De map van de extensies is niet goed ingesteld. Ga a.u.b. naar de <a href=\"%1\">padinstellingen</a> en corrigeer dit.<br/>"
+msgstr "De extensie-map is niet goed ingesteld. Ga naar de <a href=\"%1\">padinstellingen</a> om deze te corrigeren."
 
 #: CRM/Extension/Container/Default.php
 msgid ""
 "The extensions URL is not properly set. Please go to the <a href=\"%1\">URL "
 "setting page</a> and correct it.<br/>"
-msgstr "De URL van de extensies is niet goed ingesteld. Ga a.u.b. naar de <a href=\"%1\">URL-instellingen</a> en corrigeer dit.<br/>"
+msgstr "De extensie-URL is niet goed ingesteld. Ga naar de <a href=\"%1\">URL-instellingen</a> om deze te corrigeren."
 
 #: CRM/Extension/Downloader.php
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr "De extensie map is niet ingesteld of is niet schrijfbaar. Klik <a href='%1'>hier</a> om deze map in te stellen."
+msgstr "De extensie-map is niet ingesteld of is niet schrijfbaar. Klik <a href='%1'>hier</a> om deze in te stellen."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
@@ -105,7 +105,7 @@ msgid ""
 "You will not be able to install extensions at this time because your "
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
-msgstr "U kunt nu geen extensie installeren omdat uw installatie van PHP geen ZIP-bestanden ondersteunt. Vraag a.u.b. de systeembeheerder om de standaard PHP-ZIP-extensie te installeren."
+msgstr "U kunt op dit moment geen extensies installeren, omdat uw installatie van PHP geen ZIP-bestanden ondersteunt. Vraag uw systeembeheerder om de standaard PHP-ZIP-extensie te installeren."
 
 #: CRM/Extension/Downloader.php
 msgid ""
@@ -116,7 +116,7 @@ msgstr "WAARSCHUWING: Het downloadprogramma kan mogelijk geen bestanden download
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
-msgstr "Het uitpakken van de extensie is mislukt vanwege de slechte mappenstructuur."
+msgstr "Uitpakken extensie mislukt vanwege een ongeldige mappenstructuur."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
