po: update po/nl_NL/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 01:58+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -476,7 +476,7 @@ msgstr "Aantal transacties"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "Selecteer een geldig contact."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
@@ -939,7 +939,7 @@ msgstr "Er is geen financiële rekening toegekend aan dit financieel type. U kun
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
-msgstr ""
+msgstr "Betaalmethode:"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
@@ -951,27 +951,27 @@ msgstr ""
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "administer CiviCRM Financial Types"
-msgstr ""
+msgstr "financiële types CiviCRM beheren"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "Administer access to Financial Types"
-msgstr ""
+msgstr "toegang tot financiële types beheren"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
-msgstr ""
+msgstr "Valuta-ID"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Symbol"
-msgstr ""
+msgstr "Valutasymbool"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Numeric Code"
-msgstr ""
+msgstr "Numerieke code valuta"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Full Currency Name"
-msgstr ""
+msgstr "Volledige naam valuta"
 
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
@@ -1007,7 +1007,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
-msgstr ""
+msgstr "Betaling?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
